# wireworld

./: .gitignore  CMakeLists.txt  Makefile  README.md  argparcer.h  color.h  item_type.h  main  main.c  map  map.c  map.h  map_or.txt  newSleep.c  newSleep.h  position.h  random.c  simulation.c  simulation.h  utils.c  utils.h
maps/: map_small.txt  map_xor_not.txt
src/: CMakeLists.txt  color.c  main.c  map.c  simulation.c  simulation.h  utils.c  utils.h
src/include/: item_type.h  map.h  utils.h
test/: CMakeLists.txt
test/test_maps/: map_5x5_square.txt  map_small.txt
tests/: CMakeLists.txt  map_test.cpp  utils_test.cpp
